[package]
name = "web_gather"
version = "1.0.0"
edition = "2021"
authors = ["Akashic <foo.bar@foxmail.com>"]

[dependencies]
glob = "0.3.1"
lazy_static = "1.4.0"
netstat2 = "0.9"
regex = "1.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.29.10"
xml = "0.8.10"
